--- a/port.css
+++ b/port.css
@@ -49,7 +49,7 @@ html,body{
 }
 
 .name{
-    font-size: 2rem;
+    font-size: 2em;
     font-weight: 600;
     padding: 5px 10px;
     letter-spacing: 2px;
@@ -110,7 +110,7 @@ html,body{
     /* box-shadow: 0px 0px 9px #888888; */
 }
 
-.home h1{
+.name-header{
     font-size: 5rem;
     letter-spacing: 3px;
 }
@@ -261,7 +261,7 @@ html,body{
 }
 
 .progress-value{
-    box-shadow: 0px -2px 9px -2px #b50707;
+    /* box-shadow: 0px -2px 9px -2px #b50707; */
     border-radius: 100px;
     background: #6a3333;
     height: 30px;
@@ -445,12 +445,12 @@ html {
     }
 
     .heading{
-        width: 70%;
+        width: 85%;
         padding: 5px;
     }
 
     .navBar{
-        height: 6vh !important;
+        height: 9vh !important;
     }
 
 
@@ -463,8 +463,8 @@ html {
     }
 
     .name{
-        padding: 5px 10px;
-        font-size: 3rem;
+        padding: 10px;
+        /* font-size: 3rem; */
     }
     
     .home{
@@ -477,12 +477,12 @@ html {
         width: 75%;
     }
 
-    .home h1{
-        font-size: 4rem;
+    .name-header{
+        font-size: 3em;
     }
 
     .intro{
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 
     .about{
@@ -528,11 +528,11 @@ html {
         width: 100%;
         background-color: #000000;
         border-radius: 100px;
-        height: 25px;
+        height: 20px;
     }
 
     .progress-value{
-        height: 25px;
+        height: 20px;
     }
 
     .projects{
